--- a/source/partials/_nav.erb
+++ b/source/partials/_nav.erb
@@ -1,7 +1,23 @@
 <nav>
-  <ul>
+  <ul class="left">
     <li>
       <%= link_to "Blog Title", "index.html", :class => 'blog-title' %>
+    </li>
+  </ul>
+  <ul class="right">
+    <li>
+      <%= image_tag 'camera-slr.svg' %>
+    </li>
+    <li>
+      <%= image_tag 'musical-note.svg' %>
+    </li>
+    <li>
+      <%= image_tag 'code.svg' %>
+    </li>
+    <li>
+      <% link_to "apropos.html" do %>
+        <%= image_tag 'person.svg' %>
+      <% end %>
     </li>
   </ul>
 </nav>
