Typo in apropos.md.

--- a/source/partials/_nav.erb
+++ b/source/partials/_nav.erb
@@ -1,7 +1,7 @@
 <nav>
   <ul class="left">
     <li>
-      <%= link_to "Blog Title", "index.html", :class => 'blog-title' %>
+      <%= link_to "mxs.sbrk.org", "index.html", :class => 'blog-title' %>
     </li>
   </ul>
   <ul class="right">
