Updated config and started to rework the front page.

--- a/_app/assets/_less/custom.less
+++ b/_app/assets/_less/custom.less
@@ -20,9 +20,9 @@
 // @text-color: #000;
 
 // orangered #FF4500 rgb(255,69,0)
-// @link-color: orangered;
-// @background-color: #fff;
-// @text-color: #303030;
+@link-color: orangered;
+@background-color: #fff;
+@text-color: #303030;
 
 // indigo (invert) #4B0082 rgb(75,0,130)
 // @link-color: #fff;
@@ -50,9 +50,9 @@
 // @text-color: darken(@background-color, 50%);
 
 // crimson #DC143C rgb(220,20,60) × gold #FFD700 rgb(255,215,0)
-@link-color: crimson;
-@background-color: gold;
-@text-color: #000;
+// @link-color: crimson;
+// @background-color: gold;
+// @text-color: #000;
 
 // Alternative title color switch
 // Uncomment the following style will enalbe alternative post title color, this is useful when you're using the custom theme from above.
@@ -95,4 +95,13 @@
   display: inline-block;
   color: @link-color;
   vertical-align: middle;
+}
+
+.huge-tild {
+  text-align: center;
+  font-size: 404%;
+}
+
+.page-intro {
+  font-size: 120%;
 }
