--- a/_app/assets/_less/custom.less
+++ b/_app/assets/_less/custom.less
@@ -102,6 +102,47 @@
   font-size: 404%;
 }
 
+// Some pages have an introduction
 .page-intro {
-  font-size: 120%;
+  color: lighten(@text-color, 50%);
+}
+
+// Icons
+@font-face {
+  font-family: 'RaphaelIcons';
+  src: url('/assets/fonts/raphaelicons-webfont.eot');
+  src: local('☺'), url('/assets/font/raphaelicons-webfont.woff') format('woff'), url('/assets/font/raphaelicons-webfont.ttf') format('truetype'), url('/assets/font/raphaelicons-webfont.svg') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+.icon {
+   font-weight: normal;
+   font-style: normal;
+   line-height: normal;
+   font-family: 'RaphaelIcons';
+   font-size: 1.1em;
+   position: relative;
+   top: 0.1em;
+}
+
+// Override the default theme
+.navigation {
+   li {
+      a {
+         padding: 0;
+      }
+   }
+   text-align: right;
+   margin-left: 0;
+   margin-right: 0;
+   .icon {
+       font-size: 404%;
+   }
+}
+
+header {
+   .icon {
+       font-size: 242%;
+   }
 }
