--- a/_app/_includes/nav.html
+++ b/_app/_includes/nav.html
@@ -3,7 +3,15 @@
   <ul>
     {% for item in site.data.nav %}
       {% assign lowercased_title = item.title | downcase %}
-      <li {% if page.permalink == item.url or page.category == lowercased_title %}class=current{% endif %}>
+
+    {% assign page_is_in_cat = false %}
+    {% for cat in item.cate %}
+    {% if page.categories contains cat or page.category == cat %}
+    {% assign page_is_in_cat = true %}
+    {% endif %}
+    {% endfor %}
+
+      <li {% if page.permalink == item.url or page_is_in_cat == true %}class=current{% endif %}>
         <a href="{{ item.url | prepend: site.base }}" class="icon">
           {{ item.title }}
         </a>
