--- a/_app/_includes/page-item.html
+++ b/_app/_includes/page-item.html
@@ -24,7 +24,7 @@
     {% endcapture %}
 
     <!-- Item title -->
-    <a href="{{ post.url | prepend: site.base }}" {% if site.colorful_list %}{{ post_link_color }}{% endif %}>{{ post.title }}</a>
+    <a href="{{ post.url | prepend: site.base }}" {% if site.colorful_list %}{{ post_link_color }}{% endif %}>{% if post.alt-title %}{{ post.alt-title }}{% else %}{{ post.title }}{% endif %}</a>
 
     <!-- External link indicator -->
     {% if post.link %}
