--- a/_app/_layouts/page.html
+++ b/_app/_layouts/page.html
@@ -13,7 +13,7 @@ layout: default
 
   <!-- Page title -->
   <header>
-    <h1>{{ page.title }}</h1>
+    <h1>{{ page.title | downcase }}</h1>
     {% if page.desc %}<small>{{ page.desc }}</small>{% endif %}
   </header>
 
