--- a/_app/_layouts/post-norway.html
+++ b/_app/_layouts/post-norway.html
@@ -5,7 +5,7 @@ layout: default
 <article>
   <header>
     <h1>
-      l'instant norvégien
+      <a href="{% post_url writings/2013-09-20-norway %}">l'instant norvégien</a>
     </h1>
     {% assign m = page.date | date: "%-m" %}
     <small>{{ page.date | date: "%-d" }} {% case m %}{% when '1' %}Janvier{% when '2' %}Février{% when '3' %}Mars{% when '4' %}Avril{% when '5' %}Mai{% when '6' %}Juin{% when '7' %}Juillet{% when '8' %}Août{% when '9' %}Septembre{% when '10' %}Octobre{% when '11' %}Novembre{% when '12' %}Décembre{% endcase %} {{ page.date | date: "%Y" }} - <b>{{ page.title }}</b></small>
